[gd_scene load_steps=12 format=3 uid="uid://b5kpvitijyuxr"]

[ext_resource type="Script" uid="uid://rwb73sh4athc" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://b4412lgbvhe1i" path="res://assets_final/Frame 8(1).png" id="2_onrkg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(44, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_onrkg"]
atlas = ExtResource("2_onrkg")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("2_onrkg")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("2_onrkg")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("2_onrkg")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("2_onrkg")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("2_onrkg")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_dw050"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}],
"loop": false,
"name": &"attack",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b26j0"]
size = Vector2(56.5, 21.5)

[node name="player" type="CharacterBody2D"]
position = Vector2(2, -17)
script = ExtResource("1_onrkg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, 17)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_onrkg")
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 17)
scale = Vector2(0.15, 0.15)
shape = SubResource("RectangleShape2D_onrkg")

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="dash_again_timer" type="Timer" parent="."]

[node name="AttackSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, 18)
scale = Vector2(0.18, 0.18)
sprite_frames = SubResource("SpriteFrames_dw050")
animation = &"attack"
autoplay = "attack"
frame = 5
frame_progress = 1.0

[node name="AttackArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(26, 15)
shape = SubResource("RectangleShape2D_b26j0")

[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dash_again_timer" to="." method="_on_dash_again_timer_timeout"]
